--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<script src="Script.js"></script>
 	</head>
 	<body>
-		
+		<div class="my_fist_website"><p>my_fist_website</p></div>
 		
 	</body>
 </html>
