--- a/index.html
+++ b/index.html
@@ -1,12 +1,75 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title>тест</title>
-		<script src="Script.js"></script>
-	</head>
-	<body>
-		<div class="my_fist_website"><p>my_fist_website</p></div>
-		
-	</body>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>IT Школа</title>
+    <link rel="stylesheet" href="style1.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>IT Школа</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">Про нас</a></li>
+                    <li><a href="#courses">Наші курси</a></li>
+                    <li><a href="#contact">Зв'язок</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+	<section id="banner">
+    <div class="container">
+        <h2>Вивчайте IT з нами</h2>
+        <p>Запишіться на наші курси та знайдіть роботу своєї мрії</p>
+        <a href="#courses" class="btn">Дізнатись більше</a>
+    </div>
+</section>
+
+<section id="about">
+    <div class="container">
+        <h2>Про нас</h2>
+        <p>IT Школа - це сучасна освітня ініціатива, яка пропонує різні курси з IT-технологій. Наша мета - допомогти нашим студентам отримати необхідні знання та навички для реалізації своїх професійних амбіцій.</p>
+    </div>
+</section>
+
+<section id="courses">
+    <div class="container">
+        <h2>Наші курси</h2>
+        <p>Ми пропонуємо різноманітні курси з IT-технологій, включаючи:</p>
+        <ul>
+            <li>Веб-розробка</li>
+            <li>Мобільна розробка</li>
+            <li>Аналітика даних</li>
+            <li>Інтернет речей</li>
+            <li>Кібербезпека</li>
+        </ul>
+    </div>
+</section>
+
+ <section id="contact">
+    <div class="container">
+        <h2>Зв'язок</h2>
+        <form>
+            <label for="name">Ім'я</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="message">Повідомлення</label>
+            <textarea id="message" name="message" required></textarea>
+
+            <button type="submit">Відправити</button>
+		</form>
+	</div>
+ </section>
+ <footer>
+    <div class="container">
+        <p>&copy; IT Школа 2023. Усі права захищено.</p>
+    </div>
+</footer>
+</body>
 </html>
